--- a/web/css/style.css
+++ b/web/css/style.css
@@ -19,6 +19,21 @@ body {
   background: #fff;
 }
 
+.hover {
+   max-width:400px; 
+   height:80px; 
+   line-height:80px; 
+   margin:20px auto; 
+   background-color:#f8bbd0;  
+   text-align:center; transition:all 0.8s, color 0.3s 0.3s;  
+   color:#504f4f; cursor: pointer;  
+}
+
+.fon:hover{
+      box-shadow:400px 0 0 0 rgba(0,0,0,0.5) inset;   
+}
+
+
 #page {
   position: relative;
   overflow-x: hidden;
